# kos-autosar-ucm

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml
cmake/: Package.cmake
doc/: base-scenario-2.0.wsd  base-scenario.wsd  state-diagram.wsd
doc/negative-scenarios/: NS-1-ucm-compromised.wsd  NS-2-sm-compromised.wsd  NS-3-ota-compromised.wsd  NS-4-ucm-master-compromised.wsd
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/resources/: KlogEntity.edl
src/app/src/: init.yaml.in  klog_entity.c  security.psl
src/components/: CMakeLists.txt
src/components/audit/: CMakeLists.txt
src/components/interface/: CMakeLists.txt
src/components/interface/resources/: Interface.cdl  Interface.edl  Interface.idl
src/components/interface/src/: interface.c
src/components/klog_storage/: CMakeLists.txt
src/components/klog_storage/resources/: KlogStorageEntity.edl
src/components/klog_storage/src/: klog_storage_entity.c
src/components/master/: CMakeLists.txt
src/components/master/resources/: Master.cdl  Master.edl  Master.idl
src/components/master/src/: master.c
src/components/ota/: CMakeLists.txt
src/components/ota/resources/: OTA.cdl  OTA.edl  OTA.idl
src/components/ota/src/: ota.c
